Respond to feedback about when null is okay